--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ main {
 <main>
   <div class="card">
     <span class="badge">Mais Pedido</span>
-    <img src="https://github.com/ClenaStore/cardapiomercatto/blob/main/promocoes/churrasco.png?raw=true" alt="Monte Seu Prato">
+    <img src="https://github.com/ClenaStore/delivery/blob/main/paste/Captura%20de%20tela%202025-11-05%20101949.png?raw=true" alt="Monte Seu Prato">
     <div class="card-content">
       <h2>Monte Seu Prato</h2>
       <p>Escolha suas proteínas e acompanhamentos favoritos em um prato completo e saboroso.</p>
