--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ main{padding:20px;display:grid;grid-template-columns:repeat(auto-fit,minmax(250p
 <div class="modal-bg" id="modal-bg">
   <div class="modal" id="modal">
     <button class="close" id="close">&times;</button>
-    <img src="https://github.com/ClenaStore/cardapiomercatto/blob/main/promocoes/churrasco.png?raw=true">
+    <img src="https://github.com/ClenaStore/delivery/blob/main/paste/Captura%20de%20tela%202025-11-05%20101949.png?raw=true">
     <h2>Monte Seu Prato</h2>
     <p class="price">R$ 45,00</p>
     <div id="blocos"></div>
