--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 
 <main>
   <div class="card" id="card-prato">
-    <img src="https://github.com/ClenaStore/cardapiomercatto/blob/main/promocoes/churrasco.png?raw=true">
+    <img src="https://github.com/ClenaStore/delivery/blob/main/paste/Captura%20de%20tela%202025-11-05%20101949.png?raw=true">
     <div class="card-content">
       <h2>Monte Seu Prato</h2>
       <p>Monte sua refeição com ingredientes selecionados.</p>
@@ -80,7 +80,7 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 <div class="modal-bg" id="modal-bg">
   <div class="modal" id="modal">
     <button class="close" id="close">&times;</button>
-    <img src="https://github.com/ClenaStore/cardapiomercatto/blob/main/promocoes/churrasco.png?raw=true">
+    <img src="https://github.com/ClenaStore/delivery/blob/main/paste/Captura%20de%20tela%202025-11-05%20101949.png?raw=true">
     <div class="modal-content">
       <h2>Monte Seu Prato</h2>
       <p class="price">R$ 45,00</p>
