--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <title>Monte Seu Prato - Delícia Gourmet</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
 :root{
   --white:#ffffff;
@@ -28,11 +29,22 @@ main{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:2
 .card-content p{color:#64748b;font-size:.9rem;margin-bottom:8px;}
 .price{font-weight:600;color:var(--orange);font-size:1rem;}
 
-/* Modal */
-.modal-bg{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.65);display:none;align-items:center;justify-content:center;z-index:10;}
-.modal{background:var(--white);border-radius:10px;width:95%;max-width:520px;max-height:90vh;overflow-y:auto;animation:fadeIn .25s ease;}
+/* MODAL */
+.modal-bg{
+  position:fixed;top:0;left:0;width:100%;height:100%;
+  background:rgba(0,0,0,0.65);display:none;align-items:center;justify-content:center;z-index:10;
+}
+.modal{
+  background:var(--white);
+  border-radius:10px;
+  width:95%;max-width:520px;
+  height:85vh;overflow-y:auto;
+  margin-top:20px;
+  position:relative;
+  animation:fadeIn .25s ease;
+}
 .modal img{width:100%;height:200px;object-fit:cover;}
-.modal-content{padding:20px;}
+.modal-content{padding:20px;padding-top:60px;}
 .modal h2{font-size:1.2rem;margin:10px 0;color:var(--black);}
 .modal .price{color:var(--orange);font-size:1.1rem;margin-bottom:5px;}
 .modal small{color:var(--red);font-size:.8rem;}
@@ -40,9 +52,16 @@ section{margin:20px 0;}
 section h3{color:var(--black);font-size:1rem;margin-bottom:6px;}
 section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 .option{display:flex;align-items:center;gap:8px;margin:6px 0;}
-.option input[type="checkbox"]{accent-color:var(--orange);cursor:pointer;width:18px;height:18px;border-radius:50%;appearance:none;border:2px solid #ccc;position:relative;outline:none;}
+.option input[type="checkbox"]{
+  accent-color:var(--orange);
+  cursor:pointer;width:18px;height:18px;border-radius:50%;
+  appearance:none;border:2px solid #ccc;position:relative;outline:none;
+}
 .option input[type="checkbox"]:checked{border-color:var(--orange);}
-.option input[type="checkbox"]::before{content:"";position:absolute;top:3px;left:3px;width:10px;height:10px;border-radius:50%;background:var(--orange);opacity:0;transition:.2s;}
+.option input[type="checkbox"]::before{
+  content:"";position:absolute;top:3px;left:3px;width:10px;height:10px;border-radius:50%;
+  background:var(--orange);opacity:0;transition:.2s;
+}
 .option input[type="checkbox"]:checked::before{opacity:1;}
 .option label{cursor:pointer;}
 .limit-info{text-align:right;font-size:.8rem;color:var(--red);}
@@ -52,7 +71,22 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 #quant{font-weight:600;font-size:1.1rem;}
 .btn-add{width:100%;padding:12px;background:#ddd;color:#999;border:none;border-radius:var(--radius);font-weight:600;text-transform:uppercase;cursor:not-allowed;}
 .btn-active{background:var(--orange);color:var(--white);cursor:pointer;}
-.close{position:absolute;top:10px;right:12px;background:none;border:none;font-size:1.8rem;color:var(--white);cursor:pointer;z-index:20;}
+
+/* BOTÃO FIXO */
+.close{
+  position:fixed;
+  top:12px;right:20px;
+  background:var(--red);
+  border:none;
+  border-radius:50%;
+  width:34px;height:34px;
+  color:var(--white);
+  font-size:1.3rem;
+  cursor:pointer;
+  box-shadow:0 2px 6px rgba(0,0,0,0.3);
+  z-index:30;
+}
+
 @keyframes fadeIn{from{opacity:0;transform:scale(.95);}to{opacity:1;transform:scale(1);}}
 
 /* Responsivo */
@@ -83,7 +117,7 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
     <img src="https://github.com/ClenaStore/delivery/blob/main/paste/Captura%20de%20tela%202025-11-05%20101949.png?raw=true">
     <div class="modal-content">
       <h2>Monte Seu Prato</h2>
-      <p class="price">R$ 45,00</p>
+      <p class="price" id="precoBase">R$ 45,00</p>
       <small>🍽️ Delícia Gourmet - Almoço</small>
       <hr style="border:0;border-top:1px solid #eee;margin:12px 0;">
       <div id="blocos"></div>
@@ -100,13 +134,15 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 
 <script>
 const URL_API = "https://script.google.com/macros/s/AKfycbyqTo0EHs_BgkAW7K8BuKX8DpmJD8LDrc89caNgjQmzCoydw1BeE1Ju52dWsAQ46P60Sg/exec";
-const CACHE_KEY = "monte_prato_cache_v2";
+const CACHE_KEY = "monte_prato_cache_v3";
 const CACHE_TIME = 3 * 60 * 60 * 1000; // 3 horas
 
 let cachedData = null;
 let totalObrigatorias = 0;
+let precoBase = 45.00;
+let totalAdicionais = 0;
 
-// ===== PRÉ-CARREGA OS ITENS AO ABRIR O SITE =====
+// ===== PRÉ-CARREGA OS ITENS =====
 document.addEventListener("DOMContentLoaded", async ()=>{
   const cache = localStorage.getItem(CACHE_KEY);
   if(cache){
@@ -129,6 +165,7 @@ const modalBg=document.getElementById('modal-bg');
 const blocos=document.getElementById('blocos');
 const faltamEl=document.getElementById('faltam');
 const btnAdd=document.getElementById('btnAdd');
+const precoBaseEl=document.getElementById('precoBase');
 let q=1;
 const qEl=document.getElementById('quant');
 
@@ -136,8 +173,8 @@ const qEl=document.getElementById('quant');
 document.getElementById('card-prato').onclick=()=>abrirModal();
 document.getElementById('close').onclick=()=>modalBg.style.display='none';
 modalBg.onclick=e=>{if(e.target===modalBg)modalBg.style.display='none';};
-document.getElementById('mais').onclick=()=>{q++;qEl.textContent=q};
-document.getElementById('menos').onclick=()=>{if(q>1){q--;qEl.textContent=q}};
+document.getElementById('mais').onclick=()=>{q++;qEl.textContent=q;atualizarPreco()};
+document.getElementById('menos').onclick=()=>{if(q>1){q--;qEl.textContent=q;atualizarPreco()}};
 
 // ===== MONTA OS BLOCOS =====
 function abrirModal(){
@@ -159,14 +196,15 @@ function montarBlocos(data){
     info.itens.forEach((item,j)=>{
       const id=`${categoria}_${j}`;
       const input=document.createElement('input');
-      input.type="checkbox"; // todas "bolinhas"
+      input.type="checkbox";
       input.name=categoria;
       input.id=id;
+      input.dataset.adicional=item.adicional||0;
       input.onclick=()=>gerenciarSelecao(input,sec,info,i);
       const label=document.createElement('label');
       label.className='option';
       label.appendChild(input);
-      label.append(' '+item.nome+(item.adicional>0?` (+R$ ${item.adicional})`:''));
+      label.append(' '+item.nome+(item.adicional>0?` (+R$ ${item.adicional.toFixed(2).replace('.',',')})`:''));
       sec.appendChild(label);
     });
     const lim=document.createElement('div');
@@ -184,18 +222,23 @@ function gerenciarSelecao(input,sec,info,i){
   document.getElementById(`sel_${i}`).textContent=qt;
 
   if(qt>=info.maximo){
-    // bloqueia os não selecionados
     sec.querySelectorAll('input:not(:checked)').forEach(el=>el.disabled=true);
-    // vai pro próximo bloco
     const prox=sec.nextElementSibling;
     if(prox)prox.scrollIntoView({behavior:'smooth'});
   } else {
-    // libera novamente se desmarcou
     sec.querySelectorAll('input').forEach(el=>el.disabled=false);
   }
 
   sec.dataset.ok = qt >= info.minimo ? '1' : '0';
   atualizarStatus();
+  atualizarPreco();
+}
+
+function atualizarPreco(){
+  totalAdicionais = [...blocos.querySelectorAll('input:checked')]
+    .reduce((soma,el)=>soma+Number(el.dataset.adicional||0),0);
+  const total = (precoBase + totalAdicionais) * q;
+  btnAdd.textContent=`ADICIONAR AO PEDIDO R$ ${total.toFixed(2).replace('.',',')}`;
 }
 
 function atualizarStatus(){
